<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fire Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="action_unpair">Unpair</string>
    <string name="title_activity_settings">Settings</string>

    <string name="configure_fire_alarm_device">Configure FireAlarm</string>
    <string name="main_no_device_found">You have not configured your FireAlarm device yet.</string>

    <!-- Preference Titles -->
    <string name="wifi_header">WiFi</string>
    <string name="server_header">Remote Server</string>

    <!-- WiFi SharedPreferences -->
    <string name="ssid">SSID</string>
    <string name="password">Password</string>

    <!-- Server SharedPreferences -->
    <string name="api_endpoint">Measurement API endpoint</string>
    <string name="sensor_guid">Sensor unique ID (press to regenerate)</string>
    <string name="root_certificate">Root certificate of the API server</string>

    <string name="default_api_endpoint" translatable="false">https://howl.csvancea.xyz/api/v1/measurement/add</string>
    <string name="default_sensor_guid" translatable="false">00000000-0000-0000-0000-000000000000</string>
    <string name="default_root_certificate" tools:ignore="Typos" translatable="false">-----BEGIN CERTIFICATE-----\nMIIFazCCA1OgAwIBAgIRAIIQz7DSQONZRGPgu2OCiwAwDQYJKoZIhvcNAQELBQAw\nTzELMAkGA1UEBhMCVVMxKTAnBgNVBAoTIEludGVybmV0IFNlY3VyaXR5IFJlc2Vh\ncmNoIEdyb3VwMRUwEwYDVQQDEwxJU1JHIFJvb3QgWDEwHhcNMTUwNjA0MTEwNDM4\nWhcNMzUwNjA0MTEwNDM4WjBPMQswCQYDVQQGEwJVUzEpMCcGA1UEChMgSW50ZXJu\nZXQgU2VjdXJpdHkgUmVzZWFyY2ggR3JvdXAxFTATBgNVBAMTDElTUkcgUm9vdCBY\nMTCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIBAK3oJHP0FDfzm54rVygc\nh77ct984kIxuPOZXoHj3dcKi/vVqbvYATyjb3miGbESTtrFj/RQSa78f0uoxmyF+\n0TM8ukj13Xnfs7j/EvEhmkvBioZxaUpmZmyPfjxwv60pIgbz5MDmgK7iS4+3mX6U\nA5/TR5d8mUgjU+g4rk8Kb4Mu0UlXjIB0ttov0DiNewNwIRt18jA8+o+u3dpjq+sW\nT8KOEUt+zwvo/7V3LvSye0rgTBIlDHCNAymg4VMk7BPZ7hm/ELNKjD+Jo2FR3qyH\nB5T0Y3HsLuJvW5iB4YlcNHlsdu87kGJ55tukmi8mxdAQ4Q7e2RCOFvu396j3x+UC\nB5iPNgiV5+I3lg02dZ77DnKxHZu8A/lJBdiB3QW0KtZB6awBdpUKD9jf1b0SHzUv\nKBds0pjBqAlkd25HN7rOrFleaJ1/ctaJxQZBKT5ZPt0m9STJEadao0xAH0ahmbWn\nOlFuhjuefXKnEgV4We0+UXgVCwOPjdAvBbI+e0ocS3MFEvzG6uBQE3xDk3SzynTn\njh8BCNAw1FtxNrQHusEwMFxIt4I7mKZ9YIqioymCzLq9gwQbooMDQaHWBfEbwrbw\nqHyGO0aoSCqI3Haadr8faqU9GY/rOPNk3sgrDQoo//fb4hVC1CLQJ13hef4Y53CI\nrU7m2Ys6xt0nUW7/vGT1M0NPAgMBAAGjQjBAMA4GA1UdDwEB/wQEAwIBBjAPBgNV\nHRMBAf8EBTADAQH/MB0GA1UdDgQWBBR5tFnme7bl5AFzgAiIyBpY9umbbjANBgkq\nhkiG9w0BAQsFAAOCAgEAVR9YqbyyqFDQDLHYGmkgJykIrGF1XIpu+ILlaS/V9lZL\nubhzEFnTIZd+50xx+7LSYK05qAvqFyFWhfFQDlnrzuBZ6brJFe+GnY+EgPbk6ZGQ\n3BebYhtF8GaV0nxvwuo77x/Py9auJ/GpsMiu/X1+mvoiBOv/2X/qkSsisRcOj/KK\nNFtY2PwByVS5uCbMiogziUwthDyC3+6WVwW6LLv3xLfHTjuCvjHIInNzktHCgKQ5\nORAzI4JMPJ+GslWYHb4phowim57iaztXOoJwTdwJx4nLCgdNbOhdjsnvzqvHu7Ur\nTkXWStAmzOVyyghqpZXjFaH3pO3JLF+l+/+sKAIuvtd7u+Nxe5AW0wdeRlN8NwdC\njNPElpzVmbUq4JUagEiuTDkHzsxHpFKVK7q4+63SM1N95R1NbdWhscdCb+ZAJzVc\noyi3B43njTOQ5yOf+1CceWxG1bQVs5ZufpsMljq4Ui0/1lvh+wjChP4kqKOJ2qxq\n4RgqsahDYVvTH9w7jXbyLeiNdd8XM2w9U/t7y0Ff/9yi0GE44Za4rF2LN9d11TPA\nmRGunUHBcnWEvgJBQl9nJEiU0Zsnvgc/ubhPgXRR4Xq37Z0j4r7g1SgEEzwxA57d\nemyPxgcYxn/eR44/KJ4EBs+lVDR3veyJm+kXQ99b21/+jh5Xos1AnX5iItreGCc=\n-----END CERTIFICATE-----\n</string>

    <!-- Device Connectivity -->
    <string name="device_scanning_in_progress">Scanning for FireAlarm devices on the current WiFi network…</string>
    <string name="device_communication_failed">Make sure that your FireAlarm device is booted in configuration mode and you are connected to it.</string>
    <string name="go_to_network_settings">Go to Network Settings</string>

    <!-- Device Configuration -->
    <string name="device_title_loading_settings">Load settings</string>
    <string name="device_fetching_in_progress">Wait for the initial configuration to be fetched</string>
    <string name="device_wifi_not_configured">WiFi must be configured in order to save the settings</string>
    <string name="device_setup_finished">Setup finished! The device should restart to normal mode shortly</string>

    <!-- Device Settings Action Bar -->
    <string name="action_save">Save</string>

    <!-- Stored SharedPreferences -->
    <string name="preference_file_key">preference_file_key</string>
    <string name="preference_api_server">preference_api_server</string>
    <string name="preference_sensor_guid">preference_sensor_guid</string>

    <!-- TableView -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="table_pagination_details">Page %s, showing items %s - %s.</string>

    <string name="table_load_measurements">Loading measurements</string>
    <string name="table_fetching_in_progress">Wait for the measurements to be fetched</string>
</resources>